--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^12.5.3",
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "ffmpeg": "0.0.4",
+    "ffmpeg-static": "^4.4.0",
+    "node-opus": "^0.3.3",
+    "ytdl-core": "^4.9.1"
   },
   "devDependencies": {
     "eslint": "^7.24.0"
